user-accounts: fix enterprise toggle

Enterprise toggle isn't shown due to header bar buttons. Don't add
the toggle in to the dialog action area to fix the bug.

https://bugzilla.gnome.org/show_bug.cgi?id=734422